fixed overflow issues with gallery

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,6 +3,7 @@
 	background-color: #92b77d;
 	width: 100%;
 	height: fit-content;
+	justify-content: center;
 	border-radius: 5px;
 }
 
@@ -13,32 +14,32 @@
 
 .gallery {
 	display: grid;
+	justify-content: space-evenly;
 	width: 100%;
 	height: 100%;
-	column-gap: 1%;
-	row-gap: 1%;
-	grid-template-columns: auto auto auto;
+	column-gap: 0px;
+	row-gap: 0px;
+	grid-template-columns: 33% 33% 33%;
 	background-color: #d6d6d6;
-	overflow: auto;
+	padding: 0px;
 }
 
 .gallery-item-container {
-	display: inline-flex;
-	align-content: center;
+	display: flex;
+	align-items: center;
 	justify-content: center;
 	height: 100%;
 	width: 100%;
-	cursor: pointer;
+	/* cursor: pointer; */
 }
 
 .gallery-item {
 	display: inline-flex;
 	align-content: center;
 	justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
 	border: 3px solid;
 	border-color: black;
 	border-radius: 5px;
-	margin: 3%;
 }
